package com.peppayi.designpattern.headfirst.chapters.chapter02;

public interface DisplayElement {

    void display();
}
